# mufasa

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml  readthedocs.yml  setup.py
docs/: Makefile  rename_rst.py  requirements.txt
docs/scripts/: api_reference.py  generate_api_index.py  generate_api_reference.py  generate_rst_files.py  make_api_index.py  make_api_rst.py  render_templates.py
docs/source/: conf.py  guides.rst  index.rst  installation.rst  introduction.rst  quick_start.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/: package.rst.jinja  package.rst_t
docs/source/api/: index.rst  modules.rst  mufasa.UltraCube.rst  mufasa._version.rst  mufasa.aic.rst  mufasa.clean_fits.rst  mufasa.convolve_tools.rst  mufasa.deblend_cube.rst  mufasa.exceptions.rst  mufasa.guess_refine.rst  mufasa.holder.rst  mufasa.master_fitter.rst  mufasa.moment_guess.rst  mufasa.multi_v_fit.rst  mufasa.rst  mufasa.signals.rst  mufasa.slab_sort.rst  mufasa.spec_models.BaseModel.rst  mufasa.spec_models.HyperfineModel.rst  mufasa.spec_models.SpecModels.rst  mufasa.spec_models.ammonia_multiv.rst  mufasa.spec_models.m_constants.rst  mufasa.spec_models.meta_model.rst  mufasa.spec_models.n2hp_constants.rst  mufasa.spec_models.n2hp_deblended.rst  mufasa.spec_models.n2hp_multiv.rst  mufasa.spec_models.rst  (+14 more)
docs/sphinxext/: autoshortsummary.py
docs/templates/: class.rst.template  deprecated.rst.template  function.rst.template  index.rst.template  module.rst  module.rst.template  modules.rst.template
mufasa/: PCube.py  UltraCube.py  __init__.py  _metadata.py  aic.py  ammonia_multiv.py  clean_fits.py  convolve_tools.py  deblend_cube.py  exceptions.py  guess_refine.py  master_fitter.py  moment_guess.py  multi_v_fit.py  n2hp_multiv.py  signals.py  slab_sort.py
mufasa/spec_models/: BaseModel.py  BaseModels.py  HyperfineModel.py  SpecModels.py  ammonia_multiv.py  m_constants.py  meta_model.py  molecular_constants.py  n2hp_constants.py  n2hp_deblended.py  n2hp_multiv.py  nh3_deblended.py  test_cubes.py
mufasa/utils/: dask_ops.py  dask_utils.py  dataframe.py  decorators.py  fits_utils.py  interpolate.py  map_divide.py  memory.py  mufasa_log.py  multicore.py  neighbours.py
mufasa/visualization/: scatter_3D.py  spec_viz.py
(+8 files in other folders)
