[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mufasa"
dynamic = ["version"]
description = "MUlti-component Fitter for Astrophysical Spectral Applications"
authors = [{name = "Mike Chen"}]
urls = {homepage = "https://github.com/mcyc/mufasa"}
dependencies = [
    "numpy>=1.24.4,<2",
    "astropy",
    "matplotlib",
    "scipy>=1.7.3",
    "scikit-image>=0.17.2",
    "spectral-cube>=0.6.0",
    "radio-beam",
    "pandas",
    "plotly",
    "reproject>=0.7.1",
    "pyspeckit>=1.0.4"
]
requires-python = ">=3.8"  # Properly defined here

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0,<2.0",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "sphinx-astropy",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "numpydoc>=1.1.0,<2.0",
    "sphinx-issues>=2.0",
    "sphinxext-opengraph"
]
dev = [
    "pytest",
    "flake8"
]

[tool.setuptools.dynamic]
version = {attr = "mufasa._metadata.__version__"}

